--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.qedge.app</groupId>
   <artifactId>Asus</artifactId>
   <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <name>Asus Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <scm>
    <connection>scm:git:git@github.com:breddyprasad/Asus.git</connection>
     <developerConnection>scm:git:git@github.com:breddyprasad/Asus.git</developerConnection>
     <url>scm:git:git@github.com:breddyprasad/Asus.git</url>
-  <tag>HEAD</tag>
+  <tag>Asus-0.0.1</tag>
   </scm>
 
 <distributionManagement>
